--- a/style.css
+++ b/style.css
@@ -21,6 +21,15 @@ h3 {
     width: 100%;
     float: left;
 }
+a {
+    color: orange;
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: line-through;
+    text-transform: uppercase;
+}
+
 
 @media only screen and (min-width:500px) and (max-width:800px) {
     
