--- a/style.css
+++ b/style.css
@@ -15,6 +15,16 @@
 body {
     margin: 0;
 }
+.centralizado {
+    text-align: center;
+}
+:hover.centralizado {
+    text-transform: uppercase;
+}
+.cima {
+    height: 30px;
+    background-color: darkblue;
+}
 .efeito {
     background-color: gray;
 }
